# rusterize

./: CLAUDE.md  Cargo.toml
.cargo/: config.toml
.claude/: settings.local.json
.claude/agents/: graphics-advisor.md
benches/: rasterizer.rs
docs/: ROADMAP.md
src/: camera.rs  clipping.rs  display.rs  engine.rs  frustum.rs  lib.rs  light.rs  main.rs  math.rs  mesh.rs  model.rs  projection.rs  rasterizer.rs  renderer.rs  sorting.rs  texture.rs  transform.rs  triangle.rs  window.rs
src/clipper/: clip_space.rs  mod.rs  view_space.rs
src/math/: mat4.rs  plane.rs  vec2.rs  vec3.rs  vec4.rs
src/rasterizer/: edgefunction.rs  scanline.rs
src/render/: framebuffer.rs  mod.rs  renderer.rs
src/render/rasterizer/: edgefunction.rs  mod.rs  scanline.rs  shader.rs
tests/: shared_edge.rs
