[package]
name = "russsty"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5.1"
image = "0.25.9"
sdl2 = "0.38.0"
tobj = "4.0.3"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = "fat"           # Full cross-crate optimization
codegen-units = 1     # Better optimization, slower compile
opt-level = 3         # Maximum optimization
